--- a/SobeDesce/Base.lproj/Main.storyboard
+++ b/SobeDesce/Base.lproj/Main.storyboard
@@ -17,8 +17,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="JmW-6n-ga1">
-                                <rect key="frame" x="10" y="102" width="394" height="680"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="JmW-6n-ga1">
+                                <rect key="frame" x="10" y="114" width="394" height="668"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gxM-C0-85k">
@@ -36,9 +36,9 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="gxM-C0-85k" firstAttribute="bottom" secondItem="JmW-6n-ga1" secondAttribute="bottom" constant="50" id="Bqq-qn-cTb"/>
+                            <constraint firstItem="JmW-6n-ga1" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="0Nd-ES-5em"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="JmW-6n-ga1" secondAttribute="trailing" constant="10" id="FMm-QA-vta"/>
-                            <constraint firstItem="JmW-6n-ga1" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="Ny3-Ir-xKq"/>
+                            <constraint firstItem="gxM-C0-85k" firstAttribute="top" secondItem="JmW-6n-ga1" secondAttribute="bottom" constant="20" id="H4O-F4-DTA"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="gxM-C0-85k" secondAttribute="bottom" constant="30" id="eIF-nR-cno"/>
                             <constraint firstItem="gxM-C0-85k" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="j0V-ed-HEu"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gxM-C0-85k" secondAttribute="trailing" constant="30" id="mrw-VY-dOw"/>
@@ -197,6 +197,7 @@
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="filled" title="New Game"/>
                                         <connections>
+                                            <action selector="newGameBtnPressed:" destination="2tT-U6-AU1" eventType="touchUpInside" id="txm-aF-a9u"/>
                                             <segue destination="A5f-Tv-2AB" kind="unwind" unwindAction="unwindToHome:" id="W3M-pr-od6"/>
                                         </connections>
                                     </button>
@@ -303,16 +304,13 @@
                                 </constraints>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sobe e Desce" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gHS-Si-iZ3">
-                                <rect key="frame" x="30" y="122" width="354" height="100"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="2ss-ys-ThE"/>
-                                </constraints>
+                                <rect key="frame" x="109" y="107" width="196.5" height="65"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="31"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="CH3-xM-Fpb">
-                                <rect key="frame" x="132" y="192" width="172" height="30"/>
+                                <rect key="frame" x="121" y="192" width="172" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Recent Games"/>
@@ -325,17 +323,18 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="n43-q3-bke" firstAttribute="trailing" secondItem="XZF-bI-oJs" secondAttribute="trailing" constant="30" id="3FT-ge-2DE"/>
+                            <constraint firstItem="CH3-xM-Fpb" firstAttribute="centerX" secondItem="gHS-Si-iZ3" secondAttribute="centerX" id="63X-No-gxz"/>
                             <constraint firstItem="n43-q3-bke" firstAttribute="trailing" secondItem="JsP-JH-A6l" secondAttribute="trailing" constant="30" id="AZu-83-qkr"/>
                             <constraint firstItem="XZF-bI-oJs" firstAttribute="top" secondItem="JsP-JH-A6l" secondAttribute="bottom" constant="5" id="EQO-wc-4bY"/>
                             <constraint firstItem="JsP-JH-A6l" firstAttribute="leading" secondItem="n43-q3-bke" secondAttribute="leading" constant="30" id="Eq0-GI-dIH"/>
-                            <constraint firstItem="gZ6-2k-uhz" firstAttribute="top" secondItem="gHS-Si-iZ3" secondAttribute="bottom" constant="30" id="JIr-Vr-BrC"/>
-                            <constraint firstItem="gHS-Si-iZ3" firstAttribute="leading" secondItem="n43-q3-bke" secondAttribute="leading" constant="30" id="JQm-FO-mSU"/>
-                            <constraint firstItem="n43-q3-bke" firstAttribute="trailing" secondItem="gHS-Si-iZ3" secondAttribute="trailing" constant="30" id="MLK-Ee-qK7"/>
+                            <constraint firstItem="gZ6-2k-uhz" firstAttribute="top" secondItem="CH3-xM-Fpb" secondAttribute="bottom" constant="30" id="JIr-Vr-BrC"/>
                             <constraint firstItem="n43-q3-bke" firstAttribute="bottom" secondItem="XZF-bI-oJs" secondAttribute="bottom" constant="30" id="R3W-Vx-UC5"/>
-                            <constraint firstItem="gHS-Si-iZ3" firstAttribute="top" secondItem="n43-q3-bke" secondAttribute="top" constant="30" id="TJx-Sm-Upn"/>
+                            <constraint firstItem="gHS-Si-iZ3" firstAttribute="top" secondItem="n43-q3-bke" secondAttribute="top" constant="15" id="TJx-Sm-Upn"/>
                             <constraint firstItem="XZF-bI-oJs" firstAttribute="leading" secondItem="n43-q3-bke" secondAttribute="leading" constant="30" id="YVU-DB-PgY"/>
                             <constraint firstItem="JsP-JH-A6l" firstAttribute="top" secondItem="gZ6-2k-uhz" secondAttribute="bottom" constant="30" id="f2B-7I-4du"/>
                             <constraint firstItem="gZ6-2k-uhz" firstAttribute="leading" secondItem="n43-q3-bke" secondAttribute="leading" constant="30" id="iRv-Og-I9P"/>
+                            <constraint firstItem="CH3-xM-Fpb" firstAttribute="top" secondItem="gHS-Si-iZ3" secondAttribute="bottom" constant="20" id="kPx-pt-tYf"/>
+                            <constraint firstItem="gHS-Si-iZ3" firstAttribute="centerX" secondItem="0RW-ky-F1Z" secondAttribute="centerX" id="yLo-vT-paP"/>
                             <constraint firstItem="n43-q3-bke" firstAttribute="trailing" secondItem="gZ6-2k-uhz" secondAttribute="trailing" constant="30" id="zwq-Fv-CKw"/>
                         </constraints>
                     </view>
@@ -360,12 +359,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="LKi-wz-kTv">
-                                <rect key="frame" x="30" y="229" width="354" height="583"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" style="insetGrouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="LKi-wz-kTv">
+                                <rect key="frame" x="10" y="159" width="394" height="653"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recent Games" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aNP-en-3jc">
-                                <rect key="frame" x="102" y="142" width="210" height="37"/>
+                                <rect key="frame" x="102" y="107" width="210" height="37"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="210" id="hwv-s7-Kcs"/>
                                     <constraint firstAttribute="height" constant="37" id="mkP-SN-91V"/>
@@ -378,10 +377,10 @@
                         <viewLayoutGuide key="safeArea" id="fXd-lE-2B6"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="LKi-wz-kTv" firstAttribute="top" secondItem="aNP-en-3jc" secondAttribute="bottom" constant="50" id="3kh-Uz-9sG"/>
-                            <constraint firstItem="LKi-wz-kTv" firstAttribute="leading" secondItem="fXd-lE-2B6" secondAttribute="leading" constant="30" id="aFb-BE-cWs"/>
-                            <constraint firstItem="aNP-en-3jc" firstAttribute="top" secondItem="fXd-lE-2B6" secondAttribute="top" constant="50" id="iby-KU-wKN"/>
-                            <constraint firstItem="fXd-lE-2B6" firstAttribute="trailing" secondItem="LKi-wz-kTv" secondAttribute="trailing" constant="30" id="oiU-rm-TRn"/>
+                            <constraint firstItem="LKi-wz-kTv" firstAttribute="top" secondItem="aNP-en-3jc" secondAttribute="bottom" constant="15" id="3kh-Uz-9sG"/>
+                            <constraint firstItem="LKi-wz-kTv" firstAttribute="leading" secondItem="fXd-lE-2B6" secondAttribute="leading" constant="10" id="aFb-BE-cWs"/>
+                            <constraint firstItem="aNP-en-3jc" firstAttribute="top" secondItem="fXd-lE-2B6" secondAttribute="top" constant="15" id="iby-KU-wKN"/>
+                            <constraint firstItem="fXd-lE-2B6" firstAttribute="trailing" secondItem="LKi-wz-kTv" secondAttribute="trailing" constant="10" id="oiU-rm-TRn"/>
                             <constraint firstItem="fXd-lE-2B6" firstAttribute="bottom" secondItem="LKi-wz-kTv" secondAttribute="bottom" constant="50" id="uGn-rh-f41"/>
                             <constraint firstItem="aNP-en-3jc" firstAttribute="centerX" secondItem="jIQ-hT-Pzx" secondAttribute="centerX" id="ugZ-Ak-8Nm"/>
                         </constraints>
@@ -416,8 +415,8 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="mLK-Oi-dxI"/>
-        <segue reference="7I9-8g-LAG"/>
+        <segue reference="AZm-6l-1Od"/>
+        <segue reference="Jez-77-W5I"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="Naipe_copas" width="668" height="731"/>
