--- a/SobeDesce/cells/PointsCell.xib
+++ b/SobeDesce/cells/PointsCell.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -10,49 +11,78 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="88" id="KGk-i7-Jjw" customClass="PointsCell" customModule="SobeDesce" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="100" id="KGk-i7-Jjw" customClass="PointsCell" customModule="SobeDesce" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="372" height="88"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="372" height="88"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="ynu-jn-DQL">
-                        <rect key="frame" x="105" y="0.0" width="267" height="88"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="KfX-PD-Mgb">
-                            <size key="itemSize" width="128" height="128"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        </collectionViewFlowLayout>
-                    </collectionView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y0Y-Rc-Xiy">
-                        <rect key="frame" x="0.0" y="0.0" width="100" height="88"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="crg-oy-b1e">
+                        <rect key="frame" x="10" y="10" width="352" height="68"/>
+                        <subviews>
+                            <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="EUz-tz-EhC">
+                                <rect key="frame" x="0.0" y="0.0" width="85" height="68"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y0Y-Rc-Xiy">
+                                        <rect key="frame" x="10" y="5" width="70" height="58"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="70" id="hiW-SY-Ltf"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="Y0Y-Rc-Xiy" secondAttribute="bottom" constant="5" id="0ap-eY-HwM"/>
+                                    <constraint firstAttribute="trailing" secondItem="Y0Y-Rc-Xiy" secondAttribute="trailing" constant="5" id="c1z-31-DKM"/>
+                                    <constraint firstItem="Y0Y-Rc-Xiy" firstAttribute="top" secondItem="EUz-tz-EhC" secondAttribute="top" constant="5" id="nVa-I3-Jfh"/>
+                                    <constraint firstItem="Y0Y-Rc-Xiy" firstAttribute="leading" secondItem="EUz-tz-EhC" secondAttribute="leading" constant="10" id="xom-1E-YSN"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1cP-OF-bxS">
+                                <rect key="frame" x="90" y="5" width="262" height="58"/>
+                                <subviews>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="ynu-jn-DQL">
+                                        <rect key="frame" x="5" y="5" width="247" height="48"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="5" minimumInteritemSpacing="0.0" id="KfX-PD-Mgb">
+                                            <size key="itemSize" width="128" height="128"/>
+                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        </collectionViewFlowLayout>
+                                    </collectionView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="ynu-jn-DQL" firstAttribute="top" secondItem="1cP-OF-bxS" secondAttribute="top" constant="5" id="0WL-HF-89P"/>
+                                    <constraint firstAttribute="bottom" secondItem="ynu-jn-DQL" secondAttribute="bottom" constant="5" id="NXA-AI-FvT"/>
+                                    <constraint firstItem="ynu-jn-DQL" firstAttribute="leading" secondItem="1cP-OF-bxS" secondAttribute="leading" constant="5" id="fiU-YH-07y"/>
+                                    <constraint firstAttribute="trailing" secondItem="ynu-jn-DQL" secondAttribute="trailing" constant="10" id="fw1-wV-CEE"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <constraints>
-                            <constraint firstAttribute="width" constant="100" id="8Io-Pk-tLZ"/>
+                            <constraint firstItem="1cP-OF-bxS" firstAttribute="top" secondItem="crg-oy-b1e" secondAttribute="top" constant="5" id="7Lh-pU-qNn"/>
+                            <constraint firstAttribute="bottom" secondItem="1cP-OF-bxS" secondAttribute="bottom" constant="5" id="liu-fi-lQG"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="Y0Y-Rc-Xiy" secondAttribute="bottom" id="48t-Ta-VPy"/>
-                    <constraint firstItem="Y0Y-Rc-Xiy" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="5AL-Kc-1oV"/>
-                    <constraint firstAttribute="bottom" secondItem="ynu-jn-DQL" secondAttribute="bottom" id="5mW-Jw-MCS"/>
-                    <constraint firstItem="ynu-jn-DQL" firstAttribute="leading" secondItem="Y0Y-Rc-Xiy" secondAttribute="trailing" constant="5" id="McO-zL-qHj"/>
-                    <constraint firstItem="Y0Y-Rc-Xiy" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="X7n-V9-76C"/>
-                    <constraint firstAttribute="trailing" secondItem="ynu-jn-DQL" secondAttribute="trailing" id="j1P-Gz-yoV"/>
-                    <constraint firstItem="ynu-jn-DQL" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="y4M-FW-1Fj"/>
+                    <constraint firstItem="crg-oy-b1e" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="EaH-tq-IwD"/>
+                    <constraint firstAttribute="bottom" secondItem="crg-oy-b1e" secondAttribute="bottom" constant="10" id="GfK-Fe-xZ9"/>
+                    <constraint firstAttribute="trailing" secondItem="crg-oy-b1e" secondAttribute="trailing" constant="10" id="Vmq-ac-bUY"/>
+                    <constraint firstItem="crg-oy-b1e" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="yiS-12-sj0"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="backgroundStackView" destination="crg-oy-b1e" id="N33-Uf-221"/>
                 <outlet property="cellColletionView" destination="ynu-jn-DQL" id="hxJ-5g-R9l"/>
                 <outlet property="playerLabel" destination="Y0Y-Rc-Xiy" id="kzk-rd-Pw7"/>
             </connections>
-            <point key="canvasLocation" x="100.00000000000001" y="88.392857142857139"/>
+            <point key="canvasLocation" x="250.72463768115944" y="132.58928571428572"/>
         </tableViewCell>
     </objects>
     <resources>
