--- a/SobeDesce/cells/PointsCell.xib
+++ b/SobeDesce/cells/PointsCell.xib
@@ -29,7 +29,7 @@
                                         <constraints>
                                             <constraint firstAttribute="width" constant="70" id="hiW-SY-Ltf"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
